# tui-studio

./: Cargo.toml  Makefile  README.md  env.sh  install
.github/workflows/: ci.yml  rust.yml
crates/algebra/: Cargo.toml
crates/algebra/scripts/: gen.py  ivec2.template  uvec2.template
crates/algebra/src/vec2/: i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  mod.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  main.rs
crates/command/: Cargo.toml
crates/command/src/: component.rs  lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: buf.rs  buf_manager.rs  cursor.rs  editor.rs  input_manager.rs  lib.rs  mode.rs
crates/editor/src/api/: buf.rs  editor.rs  mod.rs
crates/editor/src/buf/: buf.rs  buf_manager.rs  code_buf.rs  cursor.rs  mod.rs
crates/editor/src/core/: editor.rs  mod.rs
crates/editor/src/core/buf/: buf.rs  content.rs  cursor.rs  history.rs  mod.rs  scroll.rs
crates/editor/src/types/: action.rs  error.rs  mod.rs  mode.rs
crates/editor/src/ui/: panel.rs
crates/file-manager/: Cargo.toml
crates/file-manager/src/: file_manager.rs
crates/file_manager/: Cargo.toml
crates/file_manager/src/: file_manager.rs
crates/info_bar/: Cargo.toml
crates/info_bar/src/: lib.rs
crates/key_binding/: Cargo.toml
crates/key_binding/src/: component.rs  lib.rs
crates/lang_support/: Cargo.toml
crates/lang_support/src/: complete.rs  highlight.rs  lang_support.rs  lsp.rs
crates/langs/: Cargo.toml
crates/langs/src/: commit_message.rs  css.rs  html.rs  lib.rs  markdown.rs  rust.rs
crates/language_support/: Cargo.toml
crates/language_support/src/: highlight.rs  language_support.rs  lib.rs
crates/language_support/src/langs/: commit_message.rs  css.rs  html.rs  markdown.rs
crates/side-view/: Cargo.toml
crates/side-view/src/: side_view.rs
crates/side_view/: Cargo.toml
crates/side_view/src/: side_view.rs
crates/sideview/: Cargo.toml
crates/sideview/src/: sideview.rs
crates/syntax_highlight/: Cargo.toml
crates/syntax_highlight/src/: lib.rs
crates/tuistudio/: Cargo.toml
crates/tuistudio/src/: app.rs  editor.rs  main.rs
crates/tuistudio/src/api/: buf.rs  error.rs  mod.rs
crates/tuistudio/src/buf/: buf.rs  buf_manager.rs  code_buf.rs  cursor.rs
crates/tuistudio/src/editor/: editor.rs  mod.rs
crates/tuistudio/src/editor/buf/: buf_manager.rs  code_buf.rs  cursor.rs  mod.rs
crates/tuistudio/src/lang_support/: highlight.rs
crates/tuistudio/src/lang_support/langs/: css.rs
crates/tuistudio/src/utils/: command.rs  key_binding.rs  mod.rs  term.rs
crates/ui/: Cargo.toml
crates/ui/src/: event_manager.rs  key_binding.rs  lib.rs  panel.rs  renderer.rs  widget.rs
crates/utils/: Cargo.toml
crates/utils/src/: color.rs  command.rs  component.rs  event.rs  file_type.rs  key.rs  lib.rs  mode.rs  rect.rs  term.rs  vec2.rs  wide_string.rs  window.rs
default/theme/: dark.theme.json
langs/: Cargo.toml
plugins/html/: Cargo.toml
plugins/html/src/: lib.rs  main.rs  plugin.rs  tokenizer.rs
scripts/: line-count
src/: action.rs  app.rs  lib.rs  main.rs
src/api/: buf.rs  client.rs  info.rs  mod.rs
src/api/language_support/: highlight.rs  mod.rs  tokenizer.rs
src/api/net/: message.rs  request.rs  response.rs
src/editor/: action.rs  buffer.rs  editor.rs  mod.rs  mode.rs  renderer.rs  window.rs
src/editor/buf/: buf.rs  code_buf.rs  content.rs  cursor.rs  history.rs  manager.rs  mod.rs  scroll.rs
src/editor/buffer/: content.rs  cursor.rs  history.rs  io.rs  mod.rs  scroll.rs
src/editor/core/: buffer.rs  editor.rs  mod.rs  mode.rs
src/editor/core/buffer/: content.rs  cursor.rs  io.rs  mod.rs  scroll.rs
src/editor/ui/: keymap.rs  mod.rs  renderer.rs
src/editor/utils/: file.rs
src/lang_support/: lint.rs  mod.rs  snippets.rs
src/lang_support/langs/: commit_message.rs  html.rs  markdown.rs
src/language_support/: highlight.rs  language_support.rs  lsp.rs  mod.rs
src/language_support/langs/: commit_message.rs  css.rs  html.rs  markdown.rs
src/plugin/: manager.rs  mod.rs
src/ui/: mod.rs  widget.rs
src/ui/editor/: panel.rs
src/ui/info_bar/: mod.rs
src/ui/panel/: tab.rs
src/ui/renderer/: mod.rs
src/utils/: color.rs  command.rs  component.rs  event.rs  file_type.rs  key_binding.rs  log.rs  mod.rs  mode.rs  rect.rs  string.rs  term.rs  vec2.rs
src/window/: manager.rs  mod.rs  window.rs  window_manager.rs
