[workspace]
members = []
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Yuta"]

[workspace.dependencies]
arboard = "3.4.1"
crossterm = { version = "0.28.1", features = ["events"] }
clap = { version = "4.5.27", features = ["derive"] }
fluent = "0.16.1"
fluent-templates = "0.13.0"
chrono = "0.4.39"
unicode-width = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
regex = "1.11.1"
thiserror = "2.0.11"
tui-studio.path = "."
dirs = "6.0.0"
log = "0.4.25"
fern = "0.7.1"

[package]
name = "tui-studio"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
crossterm.workspace = true
unicode-width.workspace = true
arboard.workspace = true
thiserror.workspace = true
fluent.workspace = true
fluent-templates.workspace = true
clap.workspace = true
chrono.workspace = true
regex.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
fern.workspace = true

[features]
default = ["language_support"]
language_support = []
