[workspace]
members = []
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Yuta"]

[workspace.dependencies]
arboard = "3.4.1"
anyhow = "1.0.97"
crossterm = { version = "0.28.1", features = ["events"] }
clap = { version = "4.5.35", features = ["derive"] }
chrono = "0.4.40"
unicode-width = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
regex = "1.11.1"
tui-studio.path = "."
dirs = "6.0.0"
log = "0.4.27"
fern = "0.7.1"

[package]
name = "tui-studio"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
unicode-width.workspace = true
arboard.workspace = true
clap.workspace = true
chrono.workspace = true
regex.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
fern.workspace = true
