[package]
name = "tui-studio"
edition = "2021"
resolver = "2"
version = "0.1.0"
license = "MIT"
authors = ["Yuta"]

[dependencies]
arboard = "3.5.0"
anyhow = "1.0.98"
crossterm = { version = "0.29.0", features = ["events"] }
clap = { version = "4.5.35", features = ["derive"] }
chrono = "0.4.40"
unicode-width = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
regex = "1.11.1"
dirs = "6.0.0"
log = "0.4.27"
fern = "0.7.1"
