[package]
name = "cli"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
command.path = "../command"
key_binding.path = "../key_binding"
editor.path = "../editor"
utils.path = "../utils"
fluent.workspace = true
fluent-templates.workspace = true
clap = { version = "4.5.27", features = ["derive"] }
chrono.workspace = true
