[package]
name = "editor"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
algebra.workspace = true
utils.workspace = true
ui.workspace = true
crossterm.workspace = true
log.workspace = true
unicode-width.workspace = true
chrono.workspace = true
