[package]
name = "lang_support"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lang_support.rs"

[dependencies]
utils.path = "../utils"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
regex.workspace = true
