[package]
name = "tuistudio"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
crossterm.workspace = true
utils.path = "../utils"
key_binding.path = "../key_binding"
command.path = "../command"
unicode-width.workspace = true
arboard.workspace = true
lang_support.path = "../lang_support"
langs.path = "../langs"
tokio.workspace = true
thiserror.workspace = true
fluent.workspace = true
fluent-templates.workspace = true
clap.workspace = true
chrono.workspace = true


[lib]
path = "src/editor.rs"
