[package]
name = "tuistudio"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
crossterm.workspace = true
unicode-width.workspace = true
arboard.workspace = true
thiserror.workspace = true
fluent.workspace = true
fluent-templates.workspace = true
clap.workspace = true
chrono.workspace = true
regex.workspace = true

[lib]
path = "src/app.rs"
